make fix nav bar topmost by add z-index / index.less

--- a/less/index.less
+++ b/less/index.less
@@ -158,13 +158,16 @@ nav {
   align-items: center;
   justify-content: space-between;
   background: #07011e;
-  margin-top: 1rem;
+  // margin-top: 1rem;
 
   position: fixed;
   width: 100%;
   left: 0;
   right: 0;
   padding: 0 5rem;
+  padding: 2rem 5rem;
+  z-index: 999;
+  margin-top: 0;
 
   #container {
     display: none;
@@ -213,7 +216,7 @@ header {
     align-content: center;
     justify-content: space-between;
     padding: 2rem 1rem;
-    margin-top: 5rem;
+    margin-top: 8rem;
     margin-bottom: 1.5rem;
 
     div {
@@ -257,6 +260,7 @@ header {
 
     figure {
       // margin-top: 5rem;
+      margin-top: 8rem;
 
       img {
         width: 100%;
@@ -532,8 +536,8 @@ body {
     }
 
     nav {
-      margin-top: 0.5rem;
-      padding: 0 1.45rem;
+      // margin-top: 0.5rem;
+      padding: 1rem 1.45rem;
       #desktopView {
         display: none;
       }
@@ -584,7 +588,7 @@ body {
         order: 1;
 
         figure {
-          margin-top: 5rem;
+          margin-top: 8rem;
 
           img {
             width: 100%;
